--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "parcel ./src/index.html",
-		"build": "parcel build ./src/index.html"
+		"build": "parcel build ./src/index.html",
+		"deploy": "gh-pages -d ./dist"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"gh-pages": "^3.2.3",
 		"parcel-bundler": "^1.12.5"
 	}
 }
