--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"gh-pages": "^3.2.3",
-		"parcel-bundler": "^1.12.5"
+		"parcel-bundler": "^1.12.5",
+		"parcel-plugin-handlebars-precompile": "^1.0.2"
 	}
 }
