--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
 		"gh-pages": "^3.2.3",
 		"parcel-bundler": "^1.12.5",
 		"parcel-plugin-handlebars-precompile": "^1.0.2"
+	},
+	"dependencies": {
+		"array-sort": "^1.0.0"
 	}
 }
